<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TcoInsightSignalStates_v_5_x_x" Id="{8a5f3434-e1e5-079a-059f-4302c50f0240}">
    <Declaration><![CDATA[{attribute addProperty Name "Signal states"}
TYPE TcoInsightSignalStates_v_5_x_x :
STRUCT
	{attribute addProperty Name "<#Acquisition trigger enable#>"}
	AcquisitionTriggerEnable :  BOOL;
	{attribute addProperty Name "<#Acquisition trigger#>"}
	AcquisitionTrigger :  BOOL;
	{attribute addProperty Name "<#Clear exposure complete#>"}
	ClearExposureComplete :  BOOL;
	{attribute addProperty Name "<#Set offline#>"}
	SetOffline :  BOOL;

	{attribute addProperty Name "<#Enable results buffering#>"}
	EnableResultsBuffering AT %Q* : BOOL;
	{attribute addProperty Name "<#Acknowledge inspection results#>"}
	AcknowledgeInspectionResults AT %Q* : BOOL;
	{attribute addProperty Name "<#Extended user data set#>"}
	ExtendedUserDataSet AT %Q* : BOOL;
	{attribute addProperty Name "<#Execute command#>"}
	ExecuteCommand AT %Q* : BOOL;
	{attribute addProperty Name "<#Clear error#>"}
	ClearError AT %Q* : BOOL;

	{attribute addProperty Name "<#Command#>"}
	Command : UINT;

	{attribute addProperty Name "<#Trigger soft event#>"}
	TriggerSoftEvent :BYTE;
	
	{attribute addProperty Name "<#Acquisition trigger ready#>"}
	AcquisitionTriggerReady : BOOL;
	{attribute addProperty Name "<#Acquisition trigger acknowledge#>"}
	AcquisitionTriggerAcknowledge : BOOL;
	{attribute addProperty Name "<#Exposure complete#>"}
	ExposureComplete : BOOL;
	{attribute addProperty Name "<#Missed acquisition#>"}
	MissedAcquisition : BOOL;
	{attribute addProperty Name "<#Offline reason 0#>"}
	OfflineReason0 : BOOL;
	{attribute addProperty Name "<#Offline reason 1#>"}
	OfflineReason1 : BOOL;
	{attribute addProperty Name "<#Offline reason 2#>"}
	OfflineReason2 : BOOL;
	{attribute addProperty Name "<#Online#>"}
	Online : BOOL;
	{attribute addProperty Name "<#Acquisition ID#>"}
	AcquisitionID : UINT;
	
	{attribute addProperty Name "<#System busy#>"}
	SystemBusy : BOOL;
	{attribute addProperty Name "<#Inspection completed#>"}
	InspectionCompleted: BOOL;
	{attribute addProperty Name "<#Results buffer overrun#>"}
	ResultsBufferOverrun : BOOL;
	{attribute addProperty Name "<#Results valid#>"}
	ResultsValid : BOOL;	
	{attribute addProperty Name "<#Command executing#>"}
	CommandExecuting : BOOL;
	{attribute addProperty Name "<#Command complete#>"}
	CommandComplete : BOOL;
	{attribute addProperty Name "<#Command failed#>"}
	CommandFailed : BOOL;
	{attribute addProperty Name "<#Extended user data set acknowledge#>"}
	ExtendedUserDataSetAcknowledge: BOOL;
	{attribute addProperty Name "<#Overall job pass fail#>"}
	OverallJobPassFail : BOOL;
	{attribute addProperty Name "<#Test run ready#>"}
	TestRunReady : BOOL;
	{attribute addProperty Name "<#Error#>"}
	Error : BOOL;
	{attribute addProperty Name "<#Error code#>"}
	ErrorCode : UINT;

	{attribute addProperty Name "<#Current job ID#>"}
	CurrentJobID : UINT;

	{attribute addProperty Name "<#Trigger soft event acknowledge#>"}
	TriggerSoftEventAcknowledge : BYTE;

	{attribute addProperty Name "<#Inspection ID#>"}
	InspectionID : UINT;
	{attribute addProperty Name "<#Result code#>"}
	ResultCode : UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>